2004-05-21  n1xt3r  <n1xt3r@bluefalcon>

	* ChangeLog, nb (read_entry): Enabled filtering mode, escape_chars.

2004-05-19  n1xt3r  <n1xt3r@bluefalcon>

	* plugins/postformat/tidy.sh:
	Fixed conflicting 'generator' tags - Paul Drain <pd@cipherfunk.org>.

	* ChangeLog, nb, plugins/atom.sh, plugins/rss.sh:
	- Set NB_SYND_FILETYPE default to xml - Paul Drain <pd@cipherfunk.org>.
	- Updated rss and atom plugins to utilize NB_SYND_FILETYPE.

	* ChangeLog, docs/nanoblogger.html:
	Updated cgicomment and microblogger links.

2004-05-16  n1xt3r  <n1xt3r@bluefalcon>

	* ChangeLog, plugins/atom.sh, plugins/rss.sh:
	Loads autoformat plugins from inside.

	* ChangeLog, nb:
	(make_archive),(build_archives),(edit_blog): Autoformat plugins no longer
	overwrite (possibly destroy) the entry's metadata.

2004-05-11  n1xt3r  <n1xt3r@bluefalcon>

	* ChangeLog, docs/nanoblogger.html:
	Lots of minor updates to the documentation.

2004-05-08  n1xt3r  <n1xt3r@bluefalcon>

	* ChangeLog, nb (nb_main):
	Removed prompt for directory creation, now done automatically.

2004-05-06  n1xt3r  <n1xt3r@bluefalcon>

	* ChangeLog, nb (nb_main):
	Fixed "bye" typo in blog directory creation prompt.

	* ChangeLog, nb (build_archives):
	Replaced generation of "cat_n.db.htm" with "cat_n.htm" in $PARTS_DIR.

	* ChangeLog, default/archives/2004-01-18T17_12_12.htm, default/archives/cat_1.html, default/archives/monthly/2004-01.html, default/atom.xml, default/index.html, default/parts/2004-01.htm, default/parts/blog_status.htm, default/parts/fortune.htm, default/parts/news.htm:
	Updated support information in the default entry.

	* nb (delete_blog): Added test for existance of entry's file.

	* ChangeLog, default/archives/2004-01-18T17_12_12.htm, default/archives/cat_1.html, default/archives/monthly/2004-01.html, default/atom.xml, default/index.html, default/parts/2004-01.htm, default/parts/blog_status.htm, default/parts/fortune.htm, default/parts/news.htm:
	Updated intro/help entry for default.
